# gttk

./: .gitignore  CHANGELOG.md  CITATION.cff  DEVELOPER.md  LICENSE  MANIFEST.in  README.md  config.toml  environment.yml  pyproject.toml  pytest.ini  requirements.txt
docs/: Custom_Vertical_CRS_in_GeoTIFF.md
example_reports/: ASTER_PCA_bands1-9_meta.html  INEGI_f13a35e4_ms_NEW_meta.html  INEGI_f13a35e4_ms_OLD_meta.html  INEGI_f13a35e4_ms_comp.html  Pix4DMapper_ebee_ortho_comp.html  Pix4DMapper_ebee_ortho_test.xlsx  USGS_1M_11_x33y541_WA_NorthCentral_2021_B21_comp.html  USGS_1M_11_x33y541_WA_NorthCentral_2021_B21_test.xlsx  USGS_ortho_054-083_NEW_meta.html  USGS_ortho_054-083_OLD_meta.html  USGS_ortho_054-083_comp.html  us_nga_egm08_1_meta.html
gttk/: __init__.py  __main__.py  main.py
gttk/tools/: compare_compression.py  optimize_compression.py  optimize_compression_arc.py  read_metadata.py  test_compression.py
gttk/utils/: colors.py  config_loader.py  contexts.py  data_models.py  esri_epsg_lookup.py  exceptions.py  gdal_runner.py  geo_metadata_writer.py  geokey_parser.py  geotiff_processor.py  histogram_generator.py  log_helpers.py  markdown_formatter.py  metadata_extractor.py  optimize_constants.py  path_helpers.py  performance_tracker.py  preprocessor.py  report_builders.py  report_formatters.py  resource_manager.py  script_arguments.py  section_registry.py  section_renderers.py  srs_logic.py  statistics_calculator.py  tiff_tag_parser.py  validate_cloud_optimized_geotiff.py  xml_formatter.py  xml_helpers.py
plans/: TESTING_PLAN.md
tests/: README.md  __init__.py  conftest.py
tests/e2e/: __init__.py  test_compare_command.py  test_optimize_command.py  test_read_command.py  test_test_command.py
tests/fixtures/: __init__.py  mock_geotiff_factory.py
tests/integration/: __init__.py  test_metadata_workflow.py
tests/unit/: __init__.py  test_custom_vertical_crs_compound.py  test_custom_vertical_datum_storage.py  (+3 more)
toolbox/: GTTK_Toolbox.CompareCompression.pyt.xml  GTTK_Toolbox.OptimizeCompression.pyt.xml  GTTK_Toolbox.ReadMetadata.pyt.xml  GTTK_Toolbox.TestCompression.pyt.xml  GTTK_Toolbox.pyt  GTTK_Toolbox.pyt.xml  GTTK_Toolbox.xml
(+21 files in other folders)
